# openlwm2m

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO  doxygen.cfg  notes.txt
example/linux/: CMakeLists.txt  coaptransport.cpp  coaptransport.hpp  config.hpp  main.cpp
example/linux/platform/: CMakeLists.txt  log.cpp  memory.cpp  memory.hpp  platform.cpp
src/: CMakeLists.txt  bootstraphandler.cpp  bootstraphandler.hpp  client.cpp  client.hpp  dataformat.hpp  interface.hpp  itembase.hpp  jsonconverter.cpp  jsonconverter.hpp  list.hpp  log.hpp  lwm2m.hpp  lwm2mbase.hpp  lwm2mstorage.hpp  object.cpp  object.hpp  objectinstance.cpp  objectinstance.hpp  objectmanager.cpp  objectmanager.hpp  platform.hpp  reghandler.cpp  reghandler.hpp  resource.cpp  resource.hpp  resourcedesc.cpp  resourcedesc.hpp  resourceinstance.cpp  resourceinstance.hpp  serverhandler.cpp  serverhandler.hpp  status.hpp  storage.hpp  textconverter.cpp  textconverter.hpp  timer.cpp  timer.hpp  utils.cpp  utils.hpp
test/: CMakeLists.txt  config.hpp  testbootstraphandler.cpp  testconverter.cpp  testjsonconverter.cpp  testobject.cpp  testobjectinstance.cpp  testobjectmanager.cpp  testreghandler.cpp  testresource.cpp  testserverhandler.cpp  testtimer.cpp
test/platform/: CMakeLists.txt  log.cpp  platform.cpp  testplatform.hpp  testtransport.hpp
