################################################################################
# Includes
################################################################################

include_directories(
	../example/${LWM2M_PLATFORM}
)

################################################################################
# Sources
################################################################################

set(SOURCES
#	client.cpp
	jsonconverter.cpp
	object.cpp
	objectinstance.cpp
#	objectmanager.cpp
#	reghandler.cpp
	resource.cpp
#	resourcedesc.cpp
	resourceinstance.cpp
	textconverter.cpp
#	timer.cpp
	utils.cpp
)

################################################################################
# Targets
################################################################################

add_library(lwm2mclient STATIC ${SOURCES})

################################################################################
# Libraries
################################################################################
