################################################################################
# Includes
################################################################################

include_directories(
	../example/${LWM2M_PLATFORM}
)

################################################################################
# Sources
################################################################################

set(SOURCES
	jsonconverter.cpp
	object.cpp
	objectinstance.cpp
	objectmanager.cpp
	resource.cpp
	resourceinstance.cpp
	textconverter.cpp
	utils.cpp
#	client.cpp
#	reghandler.cpp
#	resourcedesc.cpp
#	timer.cpp
)

################################################################################
# Targets
################################################################################

add_library(lwm2mclient STATIC ${SOURCES})

################################################################################
# Libraries
################################################################################
