################################################################################
# Includes
################################################################################

include_directories(
	../../src
)

################################################################################
# Sources
################################################################################

set(SOURCES
	main.cpp
)

################################################################################
# Targets
################################################################################

add_executable(client ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(lwm2mclient)