################################################################################
# Includes
################################################################################

include_directories(
	.
	../../src
)

################################################################################
# Sources
################################################################################

set(SOURCES
	main.cpp
	coaptransport.cpp
)

################################################################################
# Targets
################################################################################

add_executable(client ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(client lwm2mclient platform)