################################################################################
# Check packages
################################################################################

include(FindPkgConfig)

pkg_check_modules(COAP REQUIRED libcoap-2-openssl)

################################################################################
# Includes
################################################################################

include_directories(
	.
	../../src
	platform/
	${COAP_INCLUDES}
)

################################################################################
# Sources
################################################################################

set(SOURCES
	main.cpp
	coaptransport.cpp
)

################################################################################
# Targets
################################################################################

add_executable(client ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(client lwm2mclient platform ${COAP_LIBRARIES})