################################################################################
# Includes
################################################################################

include_directories(
	../src
)

################################################################################
# Sources
################################################################################

set(SOURCES
	log.cpp
	platform.cpp
)

################################################################################
# Targets
################################################################################

add_library(testPlatform STATIC ${SOURCES})

################################################################################
# Libraries
################################################################################