################################################################################
# Includes
################################################################################

include_directories(
	../
	../../../src
)

################################################################################
# Sources
################################################################################

set(SOURCES
	log.cpp
)

################################################################################
# Targets
################################################################################

add_library(platform STATIC ${SOURCES})

################################################################################
# Libraries
################################################################################

target_link_libraries(lwm2mclient)